--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.mule.tools.devkit</groupId>
         <artifactId>mule-devkit-parent</artifactId>
-        <version>3.3-RC3</version>
+        <version>3.3.0-EA</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
