--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>mule-module-mongo</artifactId>
     <packaging>mule-module</packaging>
     <name>Mule Mongo Connector</name>
-    <version>3.2-SNAPSHOT</version>
+    <version>3.1</version>
     <description>Mule Cloud connector to mongo</description>
     <url>http://www.muleforge.org/projects/mule-module-mongo</url>
 
